this commit adds a toppings select list in index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
                 <option id="pizzaCrustGluttenFree">Glutten-free</option>
               </select>
             </div>
+            <div class="form-group">
+              <label for="pizzaToppings">Toppings :</label>
+              <select id="pizzaToppings"  class="form-control">
+                <option selected>Choose Toppings..</option>
+                <option id="pizzaToppingsCheese">Cheese</option>
+                <option id="pizzaToppingsMushroom">Mushroom</option>
+                <option id="pizzaToppingsBeef">Beef</option>
+                <option id="pizzaToppingsChicken">Chicken</option>
+              </select>
+            </div>
           </form>
         </div>
       </div>
