this commit adds a pizza select list in index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
         <div class="col-md-6">
           <form class="orders">
             <div class="form-group">
+              <label for="pizzaType">Type :</label>
+              <select id="pizzaType"  class="form-control">
+                <option selected>Choose pizza Type..</option>
+                <option id="pizzaTypeHawaiian">Hawaiian</option>
+                <option id="pizzaTypeBbqChicken">BBQ Chicken</option>
+                <option id="pizzaTypeChickenPeriperi">Chicken Periperi</option>
+                <option id="pizzaTypeBbqBeef">BBQ Beef</option>
+              </select>
+            </div>
+            <div class="form-group">
               <label for="pizzaSize">Size :</label>
               <select id="pizzaSize"  class="form-control">
                 <option selected>Choose pizza size..</option>
