--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
                 <option id="pizzaToppingsChicken">Chicken</option>
               </select>
             </div>
+            <div class="form-group">
+              <label for="pizzaNumber">Number</label>
+              <input  type="text" id="pizzaNumber" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="pizzaDelivery">Delivery :</label>
+              <select id="pizzaDelivery"  class="form-control">
+                <option selected>Choose Delivery Option</option>
+                <option id="pizzaDeliveryYes">Yes</option>
+                <option id="pizzaDeliveryNo">No</option>
+              </select>
+            </div>
           </form>
         </div>
       </div>
