this commit adds an order(submit) button on the form

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
                 <option id="pizzaDeliveryNo">No</option>
               </select>
             </div>
+            <button id="orderButton" type="submit" class="btn btn-primary" onclick="">Order</button>
           </form>
+        </div>
+        <div class="col-md-6" id="myOrder">
+
         </div>
       </div>
     </div>
