this commit adds an order function in scripts.js

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           </form>
         </div>
         <div class="col-md-6" id="myOrder">
-
+          <div class="jumbotron"><h2>Your Order</h2></div>
+          
         </div>
       </div>
     </div>
