--- a/index.html
+++ b/index.html
@@ -59,20 +59,16 @@
               <label for="pizzaNumber">Number</label>
               <input  type="text" id="pizzaNumber" class="form-control">
             </div>
-            <div class="form-group">
-              <label for="pizzaDelivery">Delivery :</label>
-              <select id="pizzaDelivery"  class="form-control">
-                <option selected>Choose Delivery Option</option>
-                <option id="pizzaDeliveryYes">Yes</option>
-                <option id="pizzaDeliveryNo">No</option>
-              </select>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="deliveryCheck">
+              <label class="form-check-label" for="deliveryCheck">Delivery</label>
             </div>
             <button id="orderButton" type="submit" class="btn btn-primary" onclick="">Order</button>
           </form>
         </div>
         <div class="col-md-6" id="myOrder">
           <div class="jumbotron"><h2>Your Order</h2></div>
-          
+
         </div>
       </div>
     </div>
