--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="js/scripts.js" charset="utf-8"></script>
     <meta charset="utf-8">
     <title>CRAZY4PIZZA</title>
@@ -16,7 +16,7 @@
       <div class="row">
         <div  class="col-md-12"><h2>Order Here</h2></div>
         <div class="col-md-6">
-          <form class="orders">
+          <form class="orders" >
             <div class="form-group">
               <label for="pizzaType">Type :</label>
               <select id="pizzaType"  class="form-control">
@@ -63,12 +63,17 @@
               <input type="checkbox" class="form-check-input" id="deliveryCheck">
               <label class="form-check-label" for="deliveryCheck">Delivery</label>
             </div>
-            <button id="orderButton" type="submit" class="btn btn-primary" onclick="">Order</button>
+            <button type="button" id="orderButton"  class="btn btn-primary" >Order</button>
           </form>
         </div>
         <div class="col-md-6" id="myOrder">
           <div class="jumbotron"><h2>Your Order</h2></div>
-
+          <p  id="one"></p>
+          <p  id="two"></p>
+          <p  id="three"></p>
+          <p  id="four"></p>
+          <p  id="five"></p>
+          <p  id="six"></p>
         </div>
       </div>
     </div>
