this commit adds a menu card and a prices card to the main webpage

--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
         <h1>CRAZY4PIZZA</h1>
       </div>
       <div class="row">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="jumbotron">
+            <div class="card-title">Menu</div></div>
+            <div class="card-body">
+              <p>Hawaiian</p>
+              <p>BBQ Chicken</p>
+              <p>BBQ Beef</p>
+              <p>Chicken Periperi</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card">
+            <div class="jumbotron">
+            <div class="card-title">Prices</div></div>
+            <div class="card-body">
+              <p>Large : 1200</p>
+              <p>Medium : 900</p>
+              <p>Small : 650</p>
+              <p>Toppings : 150</p>
+              <p>Delivery : 250(<strong><em>Delivery within Nairobi Only</em></strong>)</p>
+            </div>
+          </div>
+        </div>
+
+
         <div  class="col-md-12"><h2>Order Here</h2></div>
         <div class="col-md-6">
           <form class="orders" >
