this commit adds a readme document in the repository

--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
               <input  type="text" id="pizzaNumber" class="form-control">
             </div>
             <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="deliveryCheck">
-              <label class="form-check-label" for="deliveryCheck">Delivery</label>
+              <input name="delivery" type="checkbox" value="" id="deliveryCheck">
+              <label class="checkbox" for="deliveryCheck">
+                Delivery
+              </label>
             </div>
             <button type="button" id="orderButton"  class="btn btn-primary" >Order</button>
           </form>
