this commit displays the toal amount payable by the user

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
           <div class="card"><div class="card-title">
           <div class="jumbotron"><h2>Your Order</h2></div></div>
           <div class="card-body" id="myOrder">
-
+            <p id="one"></p>
+            <p id="two"></p>
         </div>
       </div>
     </div>
